--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -23,3 +23,12 @@
     display: flex;
     gap: 2rem;
 }
+
+@media screen and (max-width: 480px) {
+    .f-img{
+        height: 20rem;
+    }
+    .f-content{
+        margin-bottom: 4.5rem;
+    }
+}
