--- a/src/App.css
+++ b/src/App.css
@@ -34,4 +34,8 @@
   border: 1px solid var(--orange);
 }
 
-  
+@media screen and (max-width: 480px) {
+  .App{
+    padding: 1rem 2rem 0rem 2rem;
+  }
+}
