--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -66,3 +66,13 @@ textarea{
     width: 12rem;
     margin-top: 1rem;
 }
+
+@media screen and (max-width: 480px) {
+    .contact-form{
+        display: flex;
+        flex-direction: column;
+        height: 40rem;
+        margin-top: -3rem;
+        margin-bottom: 7rem;
+    }
+}
