--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -74,3 +74,11 @@
     font-size: 2.5rem;
     font-weight: bold;
 }
+
+@media screen and (max-width: 480px) {
+    .experience{
+        transform: scale(0.54);
+        height: 10rem;
+        margin-bottom: 3rem;
+    }
+}
