--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -35,3 +35,16 @@
     filter: drop-shadow(-12px 15px 13px rgba(0, 0, 0, 0.25));
     border-radius: 19px;
 }
+
+@media screen and (max-width: 480px) {
+    .projects{
+        height: 20rem;
+        margin-top: 0;
+    }
+    .swiper{
+        transform: scale(0.8);
+    }
+    .projects img{
+        width: 20rem;
+    }
+}
