--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -35,7 +35,11 @@
     list-style-type: none;
 }
 
-.n-list>ul>li:hover{
+.n-list>ul>*{
+    color: black;
+}
+
+.n-list>ul>*:hover{
     cursor: pointer;
     color: var(--orange);
 }
