--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -37,7 +37,7 @@
 }
 
 .i-button{
-    width: 8rem;
+    width: 7rem;
 }
 
 .i-icons{
@@ -47,11 +47,13 @@
 }
 
 .i-icons>*{
+    transition: all 0.25s ease-in-out;
     transform: scale(0.5);
 }
 
 .i-icons>*:hover{
     cursor: pointer;
+    scale: 1.3;
 }
 
 .i-right{
@@ -62,13 +64,13 @@
 .i-right>*{
     position: absolute;
     z-index: 1;
+    transition: all 0.25s ease-in-out;
 }
 
 .i-right>:nth-child(1){
     transform: scale(0.69);
     left: -15%;
     top: -9%;
-    /* Check back */
 }
 
 .i-right>:nth-child(2){
@@ -83,6 +85,10 @@
     top: -17%;
 }
 
+.i-right>:nth-child(3):hover{
+    scale: 1.1;
+}
+
 .i-right>:nth-child(4){
     transform: scale(0.6);
     top: -19%;
@@ -91,14 +97,28 @@
     padding: 0;
 }
 
+.glasses:hover{
+    scale: 1.2;
+}
+
 .fd1{
     top: -4%;
     left: 68%;
+    width: 13rem;
+}
+
+.fd1:hover{
+    scale: 1.2;
 }
 
 .fd2{
     top: 25.2rem;
     left: 2.3rem;
+    width: 11rem;
+}
+
+.fd2:hover{
+    scale: 1.2;
 }
 
 .blur1{
