--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -34,6 +34,19 @@
     width: 29rem;
     filter: drop-shadow(-12px 15px 13px rgba(0, 0, 0, 0.25));
     border-radius: 19px;
+    transition: all 0.3s ease-in-out;
+}
+
+.projects img:hover{
+    scale: 1.15;
+}
+
+.swiper-button-next, .swiper-button-prev{
+    color: var(--orange) !important;
+}
+
+.projects .swiper-pagination-bullet-active{
+    background: var(--orange);
 }
 
 @media screen and (max-width: 480px) {
