--- a/src/components/Talent/Talent.css
+++ b/src/components/Talent/Talent.css
@@ -24,17 +24,23 @@
     color: var(--orange);
     font-size: 2.5rem;
     font-weight: bold;
+    margin-bottom: 2rem;
 }
 
-.my-talents>:nth-child(3){
+.my-talents .line1{
     color: var(--gray);
     font-size: 14px;
     margin-top: 1rem;
 }
 
+.my-talents .line2{
+    color: var(--orange);
+    font-size: 13px;
+}
+
 .t-button{
     width: 12rem;
-    margin-top: 1rem;
+    margin-top: 2rem;
 }
 
 .my-talents a{
@@ -92,7 +98,7 @@
         margin-top: 0;
         flex-direction: column;
         gap: 5rem;
-        height: 82rem;
+        height: 93rem;
         padding: 0;
     }
     .cards{
